--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -98,7 +98,7 @@
         <widget class="QLabel" name="lbl_process">
          <property name="maximumSize">
           <size>
-           <width>80</width>
+           <width>100</width>
            <height>13</height>
           </size>
          </property>
@@ -162,7 +162,7 @@
          <property name="maximumSize">
           <size>
            <width>80</width>
-           <height>16777215</height>
+           <height>13</height>
           </size>
          </property>
          <property name="text">
@@ -228,7 +228,7 @@
          <property name="maximumSize">
           <size>
            <width>80</width>
-           <height>16777215</height>
+           <height>13</height>
           </size>
          </property>
          <property name="text">
@@ -294,7 +294,7 @@
          <property name="maximumSize">
           <size>
            <width>80</width>
-           <height>16777215</height>
+           <height>13</height>
           </size>
          </property>
          <property name="text">
@@ -702,7 +702,10 @@
         <number>50</number>
        </attribute>
        <attribute name="horizontalHeaderDefaultSectionSize">
-        <number>150</number>
+        <number>95</number>
+       </attribute>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
        </attribute>
        <attribute name="verticalHeaderVisible">
         <bool>true</bool>
