--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -477,7 +477,7 @@ QGroupBox::title {
              <item>
               <widget class="QRadioButton" name="radBnt_Media">
                <property name="enabled">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="text">
                 <string>Media</string>
@@ -487,7 +487,7 @@ QGroupBox::title {
              <item>
               <widget class="QRadioButton" name="radBnt_Baja">
                <property name="enabled">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="text">
                 <string>Baja</string>
@@ -583,11 +583,11 @@ QGroupBox::title {
         <attribute name="horizontalHeaderCascadingSectionResizes">
          <bool>true</bool>
         </attribute>
-        <attribute name="horizontalHeaderMinimumSectionSize">
-         <number>50</number>
-        </attribute>
         <attribute name="horizontalHeaderDefaultSectionSize">
          <number>95</number>
+        </attribute>
+        <attribute name="horizontalHeaderMinimumSectionSize">
+         <number>50</number>
         </attribute>
         <attribute name="horizontalHeaderStretchLastSection">
          <bool>true</bool>
@@ -595,11 +595,11 @@ QGroupBox::title {
         <attribute name="verticalHeaderVisible">
          <bool>true</bool>
         </attribute>
-        <attribute name="verticalHeaderMinimumSectionSize">
-         <number>24</number>
-        </attribute>
         <attribute name="verticalHeaderDefaultSectionSize">
          <number>28</number>
+        </attribute>
+        <attribute name="verticalHeaderMinimumSectionSize">
+         <number>24</number>
         </attribute>
         <column>
          <property name="text">
