--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -587,7 +587,7 @@ QGroupBox::title {
          <number>95</number>
         </attribute>
         <attribute name="horizontalHeaderMinimumSectionSize">
-         <number>50</number>
+         <number>25</number>
         </attribute>
         <attribute name="horizontalHeaderStretchLastSection">
          <bool>true</bool>
@@ -601,6 +601,21 @@ QGroupBox::title {
         <attribute name="verticalHeaderMinimumSectionSize">
          <number>24</number>
         </attribute>
+        <column>
+         <property name="text">
+          <string>ID</string>
+         </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="textAlignment">
+          <set>AlignCenter</set>
+         </property>
+        </column>
         <column>
          <property name="text">
           <string>Archivo</string>
