--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -95,8 +95,14 @@
             <height>34</height>
            </size>
           </property>
+          <property name="font">
+           <font>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
           <property name="text">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; color:#00007f;&quot;&gt;Picta Downloader&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>Picta Downloader</string>
           </property>
           <property name="textFormat">
            <enum>Qt::AutoText</enum>
@@ -243,7 +249,7 @@
            <bool>false</bool>
           </property>
           <property name="styleSheet">
-           <string notr="true">border-color: rgb(0, 0, 127);</string>
+           <string notr="true"/>
           </property>
           <property name="inputMask">
            <string/>
@@ -289,13 +295,6 @@
       </property>
       <item>
        <widget class="QGroupBox" name="gpBox_opt">
-        <property name="font">
-         <font>
-          <pointsize>9</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
         <property name="toolTip">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#e80707;&quot;&gt;Opciones de descarga&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#000000;&quot;&gt;Seleccione&lt;/span&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt; lo que desee descargar de la lista. Si selecciona &lt;/span&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#000000;&quot;&gt;Lista de Reproducción&lt;/span&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt; le mostrará todos los archivos que esta contiene, de lo contrario sólo el elemento de esa URL, también si selecciona &lt;/span&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#000000;&quot;&gt;Sólo audio&lt;/span&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt; se descargara nada más que el audio.&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt;Por defecto viene seleccionado &lt;/span&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#000000;&quot;&gt;Subtítulos &lt;/span&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt;que si están disponibles se pueden descargar, la &lt;/span&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#000000;&quot;&gt;Calidad de Vídeo&lt;/span&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt; puede ser: &lt;/span&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#000000;&quot;&gt;Alta&lt;/span&gt;, &lt;span style=&quot; font-size:10pt; font-weight:600; color:#000000;&quot;&gt;Media&lt;/span&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt; ó &lt;span style=&quot; font-size:10pt; font-weight:600; color:#000000;&quot;&gt;Baja&lt;/span&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt;, por defecto viene selecciona la Alta. &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
@@ -303,17 +302,7 @@
          <bool>false</bool>
         </property>
         <property name="styleSheet">
-         <string notr="true">QGroupBox {
-    border: 1px solid  rgb(0, 0, 127);
-    border-radius: 4.5px;
-    margin-top: 0.25em;
-}
-
-QGroupBox::title {
-    subcontrol-origin: margin;
-    left: 5px;
-    padding: -4px 1px 1px 1px;
-}</string>
+         <string notr="true"/>
         </property>
         <property name="title">
          <string>Opciones de descarga</string>
@@ -343,7 +332,7 @@ QGroupBox::title {
               <bool>false</bool>
              </property>
              <property name="styleSheet">
-              <string notr="true">border-color: rgb(0, 0, 127);</string>
+              <string notr="true"/>
              </property>
              <property name="inputMask">
               <string/>
@@ -520,12 +509,6 @@ QGroupBox::title {
       </item>
       <item>
        <widget class="QTableWidget" name="tableWidget">
-        <property name="font">
-         <font>
-          <family>Arial</family>
-          <pointsize>8</pointsize>
-         </font>
-        </property>
         <property name="cursor" stdset="0">
          <cursorShape>ArrowCursor</cursorShape>
         </property>
@@ -578,28 +561,28 @@ QGroupBox::title {
          <number>0</number>
         </property>
         <attribute name="horizontalHeaderVisible">
-         <bool>true</bool>
+         <bool>false</bool>
         </attribute>
         <attribute name="horizontalHeaderCascadingSectionResizes">
          <bool>true</bool>
         </attribute>
-        <attribute name="horizontalHeaderDefaultSectionSize">
-         <number>95</number>
-        </attribute>
         <attribute name="horizontalHeaderMinimumSectionSize">
          <number>25</number>
+        </attribute>
+        <attribute name="horizontalHeaderDefaultSectionSize">
+         <number>95</number>
         </attribute>
         <attribute name="horizontalHeaderStretchLastSection">
          <bool>true</bool>
         </attribute>
         <attribute name="verticalHeaderVisible">
-         <bool>true</bool>
-        </attribute>
-        <attribute name="verticalHeaderDefaultSectionSize">
-         <number>28</number>
+         <bool>false</bool>
         </attribute>
         <attribute name="verticalHeaderMinimumSectionSize">
          <number>24</number>
+        </attribute>
+        <attribute name="verticalHeaderDefaultSectionSize">
+         <number>28</number>
         </attribute>
         <column>
          <property name="text">
@@ -607,7 +590,6 @@ QGroupBox::title {
          </property>
          <property name="font">
           <font>
-           <family>Arial</family>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -622,7 +604,6 @@ QGroupBox::title {
          </property>
          <property name="font">
           <font>
-           <family>Arial</family>
            <pointsize>8</pointsize>
            <weight>75</weight>
            <bold>true</bold>
@@ -631,15 +612,6 @@ QGroupBox::title {
          <property name="textAlignment">
           <set>AlignCenter</set>
          </property>
-         <property name="foreground">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>0</red>
-            <green>0</green>
-            <blue>0</blue>
-           </color>
-          </brush>
-         </property>
         </column>
         <column>
          <property name="text">
@@ -647,7 +619,6 @@ QGroupBox::title {
          </property>
          <property name="font">
           <font>
-           <family>Arial</family>
            <pointsize>8</pointsize>
            <weight>75</weight>
            <bold>true</bold>
@@ -663,7 +634,6 @@ QGroupBox::title {
          </property>
          <property name="font">
           <font>
-           <family>Arial</family>
            <pointsize>8</pointsize>
            <weight>75</weight>
            <bold>true</bold>
@@ -679,7 +649,6 @@ QGroupBox::title {
          </property>
          <property name="font">
           <font>
-           <family>Arial</family>
            <pointsize>8</pointsize>
            <weight>75</weight>
            <bold>true</bold>
@@ -695,7 +664,6 @@ QGroupBox::title {
          </property>
          <property name="font">
           <font>
-           <family>Arial</family>
            <pointsize>8</pointsize>
            <weight>75</weight>
            <bold>true</bold>
@@ -711,7 +679,6 @@ QGroupBox::title {
          </property>
          <property name="font">
           <font>
-           <family>Arial</family>
            <pointsize>8</pointsize>
            <weight>75</weight>
            <bold>true</bold>
