Ajustados estilos Adionado Info.plist y icon.icns para informaion en MacOS

--- a/Resources/images.qrc
+++ b/Resources/images.qrc
@@ -14,5 +14,6 @@
         <file>Ayuda/picta-dl-config.png</file>
         <file>Ayuda/icono_de_lista.png</file>
         <file>Ayuda/picta_lista_canal.png</file>
+        <file>Logos/icon.icns</file>
     </qresource>
 </RCC>
