--- a/configuration.ui
+++ b/configuration.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>383</width>
-    <height>469</height>
+    <height>415</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -25,53 +25,57 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
-    <widget class="QLabel" name="label">
-     <property name="maximumSize">
-      <size>
-       <width>32</width>
-       <height>32</height>
-      </size>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="pixmap">
-      <pixmap resource="Resources/images.qrc">:/Logos/configuration_icon.png</pixmap>
-     </property>
-     <property name="scaledContents">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLabel" name="picta_dl_title">
-     <property name="maximumSize">
-      <size>
-       <width>300</width>
-       <height>20</height>
-      </size>
-     </property>
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Configuración de Picta Downloader</string>
-     </property>
-     <property name="textFormat">
-      <enum>Qt::AutoText</enum>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="maximumSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="pixmap">
+        <pixmap resource="Resources/images.qrc">:/Logos/configuration_icon.png</pixmap>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="picta_dl_title">
+       <property name="maximumSize">
+        <size>
+         <width>300</width>
+         <height>20</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Configuración de Picta Downloader</string>
+       </property>
+       <property name="textFormat">
+        <enum>Qt::AutoText</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Usuario de Picta</string>
+      <string>Usuario de Picta(Obligatorio)</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="1" column="2">
+      <item row="0" column="2">
        <widget class="QLineEdit" name="lnEdit_user_picta">
         <property name="maximumSize">
          <size>
@@ -87,27 +91,17 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="0" column="1">
        <widget class="QLabel" name="lbl_user_picta_3">
         <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Usuario&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot;font-weight:600;&quot;&gt;Usuario&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
-      <item row="1" column="3">
-       <widget class="QLabel" name="lbl_pass_picta">
-        <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Contraseña&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="4">
+      <item row="0" column="4">
        <widget class="QLineEdit" name="lnEdit_pass_picta">
         <property name="maxLength">
          <number>20</number>
@@ -120,13 +114,13 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1" colspan="4">
-       <widget class="QLabel" name="lbl_user_picta">
+      <item row="0" column="3">
+       <widget class="QLabel" name="lbl_pass_picta">
         <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt; font-weight:600; color:#ff0000;&quot;&gt;*Obligatorio&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot;font-weight:600;&quot;&gt;Contraseña&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignCenter</set>
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -142,23 +136,7 @@
       <bool>false</bool>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
-      <item row="9" column="6">
-       <widget class="QLineEdit" name="lnEdit_pass_proxy">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="maxLength">
-         <number>20</number>
-        </property>
-        <property name="echoMode">
-         <enum>QLineEdit::Password</enum>
-        </property>
-        <property name="clearButtonEnabled">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="2" colspan="3">
+      <item row="3" column="2" colspan="3">
        <widget class="QLineEdit" name="lnEdit_ip_proxy">
         <property name="inputMask">
          <string/>
@@ -177,40 +155,27 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="5">
-       <widget class="QLabel" name="lbl_port_proxy">
+      <item row="3" column="0" colspan="2">
+       <widget class="QLabel" name="lbl_ip_proxy">
         <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Puerto&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot;font-weight:600;&quot;&gt;Proxy&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
-      <item row="4" column="6">
-       <widget class="QLineEdit" name="lnEdit_port_proxy">
-        <property name="maxLength">
-         <number>4</number>
-        </property>
-        <property name="placeholderText">
-         <string>3128</string>
-        </property>
-        <property name="clearButtonEnabled">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="4" colspan="2">
-       <widget class="QLabel" name="lbl_user_picta_2">
+      <item row="8" column="0" colspan="2">
+       <widget class="QLabel" name="lbl_user_proxy">
         <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt; font-weight:600; color:#ff0000;&quot;&gt;*Opcional&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot;font-weight:600;&quot;&gt;Usuario&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignCenter</set>
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
-      <item row="9" column="2" colspan="3">
+      <item row="8" column="2" colspan="3">
        <widget class="QLineEdit" name="lnEdit_user_proxy">
         <property name="enabled">
          <bool>true</bool>
@@ -223,30 +188,49 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="0" colspan="2">
-       <widget class="QLabel" name="lbl_ip_proxy">
+      <item row="3" column="6">
+       <widget class="QLineEdit" name="lnEdit_port_proxy">
+        <property name="maxLength">
+         <number>4</number>
+        </property>
+        <property name="placeholderText">
+         <string>3128</string>
+        </property>
+        <property name="clearButtonEnabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="6">
+       <widget class="QLineEdit" name="lnEdit_pass_proxy">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="maxLength">
+         <number>20</number>
+        </property>
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+        <property name="clearButtonEnabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="5">
+       <widget class="QLabel" name="lbl_port_proxy">
         <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Proxy&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot;font-weight:600;&quot;&gt;Puerto&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
-      <item row="9" column="0" colspan="2">
-       <widget class="QLabel" name="lbl_user_proxy">
-        <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Usuario&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="5">
+      <item row="8" column="5">
        <widget class="QLabel" name="lbl_pass_proxy">
         <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Contraseña&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot;font-weight:600;&quot;&gt;Contraseña&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -259,7 +243,7 @@
    <item>
     <widget class="QCheckBox" name="checkSystray">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#e80707;&quot;&gt;Minimizar en el área de notificaciones&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt;El área de notificación se encuentra en el extremo derecho de la barra de tareas. Si selecciona esta opción el icono de Picta Downloader se mostrará ahí y no en la barra de tareas. &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;font-weight:600; color:#e80707;&quot;&gt;Minimizar en el área de notificaciones&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;&quot;&gt;El área de notificación se encuentra en el extremo derecho de la barra de tareas. Si selecciona esta opción el icono de Picta Downloader se mostrará ahí y no en la barra de tareas. &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="text">
       <string>Minimizar en el área de notificación de Sistema</string>
@@ -269,7 +253,7 @@
    <item>
     <widget class="QCheckBox" name="checkNotified">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#e80707;&quot;&gt;Mostrar en las notificaciones del Sistema&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt;Esta opción le mostrará una notificación de Sistema cuando termine de procesar una URL, las descargas estén completada y los errores &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;font-weight:600; color:#e80707;&quot;&gt;Mostrar en las notificaciones del Sistema&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;&quot;&gt;Esta opción le mostrará una notificación de Sistema cuando termine de procesar una URL, las descargas estén completada y los errores &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="text">
       <string>Mostrar en las notificaciones del Sistema</string>
@@ -285,7 +269,7 @@
       <item>
        <widget class="QCheckBox" name="checkEnvPictadl">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#e80707;&quot;&gt;Usar picta-dl de las variables de entorno del sistema&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt;Una &lt;b&gt;variable de entorno&lt;/b&gt; es una cadena de texto que los sistemas operativos como Windows, Linux o Mac usan para almacenar valores, en este caso seria el PATH o camino donde esta el binario ejecutable de picta-dl, por tanto si selecciona esta opción es que ya ud. tiene declara esta variable y no necesita el picta-dl que viene por defecto en la GUI. &lt;/span&gt;&lt;br/&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt;: ¡Si no tiene configurada esa variable de entorno en el sistema no marque esta opción o tendrá problemas al usar la aplicación!&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;font-weight:600; color:#e80707;&quot;&gt;Usar picta-dl de las variables de entorno del sistema&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;&quot;&gt;Una &lt;b&gt;variable de entorno&lt;/b&gt; es una cadena de texto que los sistemas operativos como Windows, Linux o Mac usan para almacenar valores, en este caso seria el PATH o camino donde esta el binario ejecutable de picta-dl, por tanto si selecciona esta opción es que ya ud. tiene declara esta variable y no necesita el picta-dl que viene por defecto en la GUI. &lt;/span&gt;&lt;br/&gt;&lt;span style=&quot;font-weight:600; &quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;&quot;&gt;: ¡Si no tiene configurada esa variable de entorno en el sistema no marque esta opción o tendrá problemas al usar la aplicación!&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="text">
          <string>Usar picta-dl de las variables de entorno del sistema</string>
@@ -295,7 +279,7 @@
       <item>
        <widget class="QCheckBox" name="checkEnvFFmpeg">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#e80707;&quot;&gt;Usar FFmpeg de las variables de entorno del sistema&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt;Una &lt;b&gt;variable de entorno&lt;/b&gt; es una cadena de texto que los sistemas operativos como Windows, Linux o Mac usan para almacenar valores, en este caso seria el PATH o camino donde esta el binario ejecutable de FFmpeg, por tanto si selecciona esta opción es que ya ud. tiene declara esta variable y no necesita el FFmpeg que viene por defecto en la GUI.&lt;/span&gt;&lt;br/&gt;&lt;span style=&quot; font-size:10pt; font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot; font-size:10pt; color:#000000;&quot;&gt;: ¡Si no tiene configurada esa variable de entorno en el sistema no marque esta opción o tendrá problemas al usar la aplicación!&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;font-weight:600; color:#e80707;&quot;&gt;Usar FFmpeg de las variables de entorno del sistema&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;&quot;&gt;Una &lt;b&gt;variable de entorno&lt;/b&gt; es una cadena de texto que los sistemas operativos como Windows, Linux o Mac usan para almacenar valores, en este caso seria el PATH o camino donde esta el binario ejecutable de FFmpeg, por tanto si selecciona esta opción es que ya ud. tiene declara esta variable y no necesita el FFmpeg que viene por defecto en la GUI.&lt;/span&gt;&lt;br/&gt;&lt;span style=&quot;font-weight:600; &quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;&quot;&gt;: ¡Si no tiene configurada esa variable de entorno en el sistema no marque esta opción o tendrá problemas al usar la aplicación!&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="text">
          <string>Usar FFmpeg de las variables de entorno del sistema</string>
