--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -155,7 +155,7 @@
            <cursorShape>PointingHandCursor</cursorShape>
           </property>
           <property name="toolTip">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;  font-weight:600; color:#e80707;&quot;&gt;Opciones de Picta Downloader&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;Aquí puede configurar las opciones necesarias para la descarga como el usuario y contraseña de Picta y si lo usa el proxy con el puerto.&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;: Es &lt;/span&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;obligatorio&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt; que configure su usuario y contraseña de Picta para que pueda descargar&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>&lt;html&gt;&lt;head&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;  font-weight:600; color:#e80707;&quot;&gt;Opciones de Picta Downloader&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;Aquí puede configurar las opciones necesarias para la descarga como el usuario y contraseña de Picta y si lo usa el proxy con el puerto.&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;: Es &lt;/span&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;obligatorio&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt; que configure su usuario y contraseña de Picta para que pueda descargar&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="text">
            <string>Picta-dl</string>
@@ -274,7 +274,7 @@
         <item>
          <widget class="QPushButton" name="bnt_clipboard">
           <property name="toolTip">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;font-weight:600; color:#e80707;&quot;&gt;PEGAR URL&lt;/span&gt;&lt;br/&gt;Click aquí para pegar la URL de picta y procesar la lista de reproducción&lt;span style=&quot;color:#000000;&quot;&gt;.&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;&quot;&gt;: Cada vez copie al portapapeles una URL de Picta con este botón puede pegarla&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>&lt;html&gt;&lt;head&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;font-weight:600; color:#e80707;&quot;&gt;PEGAR URL&lt;/span&gt;&lt;br/&gt;Click aquí para pegar la URL de picta y procesar la lista de reproducción&lt;span style=&quot;color:#000000;&quot;&gt;.&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;&quot;&gt;: Cada vez copie al portapapeles una URL de Picta con este botón puede pegarla&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="styleSheet">
            <string notr="true">padding: 5px;</string>
@@ -299,10 +299,7 @@
       <item>
        <widget class="QGroupBox" name="gpBox_opt">
         <property name="toolTip">
-         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+         <string>&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600; color:#b10a06;&quot;&gt;Opciones de descarga&lt;/span&gt;&lt;br /&gt;&lt;br /&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Seleccione&lt;/span&gt; lo que desee descargar de la lista. Si selecciona &lt;span style=&quot; font-weight:600;&quot;&gt;Lista de Reproducción&lt;/span&gt; le mostrará todos los archivos que esta contiene, de lo contrario sólo el elemento de esa URL, también si selecciona &lt;span style=&quot; font-weight:600;&quot;&gt;Sólo audio&lt;/span&gt; se descargara nada más que el audio.&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Por defecto viene seleccionado &lt;span style=&quot; font-weight:600;&quot;&gt;Subtítulos &lt;/span&gt;que si están disponibles se pueden descargar, la &lt;span style=&quot; font-weight:600;&quot;&gt;Calidad de Vídeo&lt;/span&gt; puede ser: &lt;span style=&quot; font-weight:600;&quot;&gt;Alta&lt;/span&gt;, &lt;span style=&quot; font-weight:600;&quot;&gt;Media&lt;/span&gt; ó &lt;span style=&quot; font-weight:600;&quot;&gt;Baja&lt;/span&gt;, por defecto viene selecciona la Alta. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
@@ -361,13 +358,18 @@ p, li { white-space: pre-wrap; }
            </item>
            <item>
             <widget class="QToolButton" name="toolButton">
+             <property name="minimumSize">
+              <size>
+               <width>38</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="toolTip">
-              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600; color:#e80707;&quot;&gt;Carpeta por defecto para la descarga&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;
+              <string>&lt;html&gt;&lt;head&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600; color:#e80707;&quot;&gt;Carpeta por defecto para la descarga&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;
 Seleccione la carpeta de descarga de los archivos por defecto, esta ruta se mantendrá guardada hasta que la cambie por otra</string>
              </property>
              <property name="styleSheet">
-              <string notr="true">padding:3px;
-min-width: 10ex;</string>
+              <string notr="true">padding:3px;</string>
              </property>
              <property name="text">
               <string>...</string>
@@ -671,7 +673,7 @@ min-width: 10ex;</string>
              <cursorShape>PointingHandCursor</cursorShape>
             </property>
             <property name="toolTip">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;  font-weight:600; color:#e80707;&quot;&gt;Procesar URL&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;Antes de comenzar a descargar debe procesar el contenido de la lista que ofrece la URL.&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;: Es &lt;/span&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;obligatorio&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt; que realize este paso antes que la descarga, en caso contrario no se le activará el botón de Descarga.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             <string>&lt;html&gt;&lt;head&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;  font-weight:600; color:#e80707;&quot;&gt;Procesar URL&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;Antes de comenzar a descargar debe procesar el contenido de la lista que ofrece la URL.&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;: Es &lt;/span&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;obligatorio&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt; que realize este paso antes que la descarga, en caso contrario no se le activará el botón de Descarga.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
             <property name="layoutDirection">
              <enum>Qt::LeftToRight</enum>
@@ -737,7 +739,7 @@ min-width: 10ex;</string>
              <cursorShape>PointingHandCursor</cursorShape>
             </property>
             <property name="toolTip">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;  font-weight:600; color:#e80707;&quot;&gt;Descargar&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;Clic aquí para  comenzar a descargar los archivos.&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;: Es &lt;/span&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;obligatorio&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt; Procesar la URL Picta antes de comenzar a descargar.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             <string>&lt;html&gt;&lt;head&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;  font-weight:600; color:#e80707;&quot;&gt;Descargar&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;Clic aquí para  comenzar a descargar los archivos.&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;: Es &lt;/span&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;obligatorio&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt; Procesar la URL Picta antes de comenzar a descargar.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
             <property name="icon">
              <iconset resource="Resources/images.qrc">
@@ -803,7 +805,7 @@ min-width: 10ex;</string>
              <cursorShape>PointingHandCursor</cursorShape>
             </property>
             <property name="toolTip">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;  font-weight:600; color:#e80707;&quot;&gt;Detener los procesos&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;Con este botón puede detener tanto el procesamiento de la lista como la descarga de archivos&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;:  Sólo se activara cuando procese la lista o este descargando archivos.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             <string>&lt;html&gt;&lt;head&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;  font-weight:600; color:#e80707;&quot;&gt;Detener los procesos&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;Con este botón puede detener tanto el procesamiento de la lista como la descarga de archivos&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;:  Sólo se activara cuando procese la lista o este descargando archivos.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
             <property name="icon">
              <iconset resource="Resources/images.qrc">
@@ -869,7 +871,7 @@ min-width: 10ex;</string>
              <cursorShape>PointingHandCursor</cursorShape>
             </property>
             <property name="toolTip">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;  font-weight:600; color:#e80707;&quot;&gt;Limpiar Lista&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;Con este botón puede limpiar el contenido de la lista de reproduccón que se muestra&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;:  Sólo se activara cuando no esté procesando la lista o descargando archivos. Elimina también la URL de descarga&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             <string>&lt;html&gt;&lt;head&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot;  font-weight:600; color:#e80707;&quot;&gt;Limpiar Lista&lt;/span&gt;&lt;br/&gt;&lt;br/&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;Con este botón puede limpiar el contenido de la lista de reproduccón que se muestra&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot;  font-weight:600; color:#000000;&quot;&gt;NOTA&lt;/span&gt;&lt;span style=&quot;  color:#000000;&quot;&gt;:  Sólo se activara cuando no esté procesando la lista o descargando archivos. Elimina también la URL de descarga&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
             <property name="icon">
              <iconset resource="Resources/images.qrc">
@@ -954,7 +956,7 @@ min-width: 10ex;</string>
    </widget>
    <widget class="QMenu" name="menuConfiguracion">
     <property name="title">
-     <string>Configuracion</string>
+     <string>Configuración</string>
     </property>
     <addaction name="actionSettings"/>
    </widget>
